# nlp-provider

./: .gitattributes  .gitignore  pyproject.toml
.github/: dependabot.yml
src/nlp_provider/: __init__.py
